lure_app/www/css/app.css
.navbar-default {
    background-color: #ffffff;
    border-color: #ffffff;
}



#tab1-content .scrollspy-section {
  /*height: 500px;
  /*border: 1px solid #DDD;*/
  text-align: justify;
}
#tab1-content .scrollspy-section {
  margin-top: 55px;
}
#section1-1.scrollspy-section {
  margin-top: 60px;
}
#tab1-scrollspy {
  position: fixed;
}
#tab1-scrollspy li > a {
  background-color: transparent;
  border: none;
  color: black;
  font-weight: 400;
  line-height:1em;
  height: 30px;
  margin-bottom: 0px;
  display: block;
  border-right: 3px solid #DCDCDC;
}
#tab1-scrollspy li > a:hover {
  color: #1b8fc1 !important;
}
#test {
  color: white;
}
#tab1-scrollspy li.active > a {
  /*background-color: #1b8fc1;
  color: white !important;*/
  color:#1b8fc1 !important;
  border-right: 3px solid #1b8fc1;
}

#tab1-content .active-scrollspy {
  margin-top: 60px;
}

#tab1-content .nav.nav-pills.nav-stacked {
  /*border-left: 2px solid #1b8fc1;*/
}

@media (max-width: 767px) {
  #section1-1.scrollspy-section {
    margin-top: 50px;
  }
  #tab1-content .scrollspy-section {
    margin-top: 45px;
  }
  #tab1-content .active-scrollspy {
    margin-top: 20px;
    position: relative;
}
}

